Some improvements: - support for flannel network (made this default now). - support for dashboard (comes as separate playbook, note that this sets   up an insecure dashboard and NodePort instead of LBs). - code cleanup.

--- a/ansible/group_vars/all.yaml
+++ b/ansible/group_vars/all.yaml
@@ -6,8 +6,11 @@
 # Base settings
 CLUSTER_NAME: md-kubernetes
 MASTER_VIP: 192.168.0.50
-NETWORK_PLUGIN: weavenet
-POD_NETWORK_CIDR: 10.120.0.0/16
+
+# Network settings
+# Choices are: flannel, weavenet
+NETWORK_PLUGIN: flannel
+POD_NETWORK_CIDR: 10.244.0.0/16
 
 # Software versions (used by installation via yum)
 KUBERNETES_VERSION: 1.8.3
