--- a/ansible/roles/keepalived/tasks/main.yaml
+++ b/ansible/roles/keepalived/tasks/main.yaml
@@ -4,7 +4,7 @@
 ---
 
 - name: Install keepalived via package manager
-  yum: name=keepalived-{{ KEEPALIVED_VERSION }} state=present
+  package: name=keepalived-{{ KEEPALIVED_VERSION }} state=present
 
 - name: Copy check script
   copy: src=check_apiserver.sh dest=/etc/keepalived/check_apiserver.sh owner=root group=root mode=0755
