--- a/ansible/roles/nginx/tasks/main.yaml
+++ b/ansible/roles/nginx/tasks/main.yaml
@@ -4,7 +4,7 @@
 ---
 
 - name: Install nginx via package manager
-  yum: name=nginx-{{ NGINX_VERSION }} state=present
+  package: name=nginx-{{ NGINX_VERSION }} state=present
 
 - name: Generate configuraton file
   template: src=nginx.conf.j2 dest=/etc/nginx/nginx.conf
