--- a/ansible/roles/primary-master/tasks/main.yaml
+++ b/ansible/roles/primary-master/tasks/main.yaml
@@ -3,6 +3,10 @@
 #
 ---
 
+- name: Make sure that we're on a supported NETWORK_PLUGIN
+  fail: msg="Unsupported NETWORK_PLUGIN. Check roles/primary-master/tasks/*.yaml"
+  when: "NETWORK_PLUGIN not in [ 'flannel', 'weavenet' ]"
+
 - name: Generate 'kubeadm' configuration file
   template: src=kubeadm-init.yaml.j2 dest=/root/kubeadm-init.yaml
 
