Minor syntactic fix.

--- a/ansible/group_vars/all.yaml
+++ b/ansible/group_vars/all.yaml
@@ -14,10 +14,10 @@ NETWORK_PLUGIN: flannel
 POD_NETWORK_CIDR: 10.244.0.0/16
 
 # Software versions (used by installation via yum)
-KUBERNETES_VERSION: 1.8.3
-KUBERNETES_CNI_VERSION: 0.5.1
-ETCD_VERSION: 3.2.7
-KEEPALIVED_VERSION: 1.3.5
-NGINX_VERSION: 1.12.2
+KUBERNETES_VERSION: "1.8.3"
+KUBERNETES_CNI_VERSION: "0.5.1"
+ETCD_VERSION: "3.2.7"
+KEEPALIVED_VERSION: "1.3.5"
+NGINX_VERSION: "1.12.2"
 
 
