Changes based on comments in the docs document: - new network plugin 'calico' - simpler unschedule/schedule commands - simpler and side-effect-freer keepalived configuration. - setup of load balancer is now separated from the cluster setup
New functionality:
- automatic setup of etcd-operator for applications running in the cluster (not the cluster itself)
- prefetching of images needed for Kubernetes operation and copying them to the cluster hosts
- support of more networking plugins: flannel (now default), weavent, calico

Other changes:
- the Dashboard now has a non-random NodePort port number if no LB was configured: 30990
- include the network plugin images in the playbook for pre-fetching and copying images

--- a/ansible/cluster-uninstall.yaml
+++ b/ansible/cluster-uninstall.yaml
@@ -3,7 +3,7 @@
 #
 --- 
 
-- name: Uninstall
+- name: Uninstall Cluster
   hosts: nodes
   remote_user: root
   gather_facts: no
@@ -11,5 +11,5 @@
   roles:
   - uninstall
   tags:
-  - uninstall
+  - uninstall-cluster
 
