--- a/ansible/etcd-operator.yaml
+++ b/ansible/etcd-operator.yaml
@@ -11,7 +11,7 @@
   gather_facts: no
   any_errors_fatal: yes
   roles:
-  - {role: dashboard,          when: "'primary-master'    in group_names" }
+  - {role: etcd-operator,      when: "'primary-master'    in group_names" }
   tags:
-  - dashboard
+  - etcd-operator
 
