--- a/ansible/roles/dashboard/tasks/main.yaml
+++ b/ansible/roles/dashboard/tasks/main.yaml
@@ -4,16 +4,16 @@
 ---
 
 - name: Get the dashboard yaml
-  local_action: shell wget -O /tmp/kubernetes-dashboard.yaml https://raw.githubusercontent.com/dashboard/master/src/deploy/alternative/kubernetes-dashboard.yaml
+  local_action: shell wget -O /tmp/kubernetes-dashboard.yaml https://raw.githubusercontent.com/kubernetes/dashboard/master/src/deploy/alternative/kubernetes-dashboard.yaml
   args:
     warn: no
 
 - name: Edit the dashboard yaml
-  local_action: "shell echo '  type: NodePort' >>/tmp/kubernetes-dashboard.yaml"
+  local_action: "command perl -pi -e 's/    targetPort: 9090/    targetPort: 9090\\n    nodePort: 30990\\n  type: NodePort/m' /tmp/kubernetes-dashboard.yaml"
   when: "not HAS_LB"
 
 - name: clone heapster git to /tmp
-  local_action: "shell cd /tmp; if [ -d heapster ]; then cd heapster; git reset --hard HEAD; git pull; else git clone https://github.com/heapster.git; fi"
+  local_action: "shell cd /tmp; if [ -d heapster ]; then cd heapster; git reset --hard HEAD; git pull; else git clone https://github.com/kubernetes/heapster.git; fi"
 
 - name: Edit grafana yaml
   local_action: "shell perl -pi -e 's/# *type: *NodePort/type: NodePort/' /tmp/heapster/deploy/kube-config/influxdb/grafana.yaml"
@@ -35,26 +35,26 @@
   synchronize: src=/tmp/heapster dest=/root/setup/dashboard/
 
 - name: Install dashboard
-  shell: export KUBECONFIG=/etc/admin.conf; kubectl apply -f /root/setup/dashboard/kubernetes-dashboard.yaml
+  shell: export KUBECONFIG=/etc/kubernetes/admin.conf; kubectl apply -f /root/setup/dashboard/kubernetes-dashboard.yaml
 
 - name: Install dashboard-admin
-  shell: export KUBECONFIG=/etc/admin.conf; kubectl apply -f /root/setup/dashboard/dashboard-admin.yaml
+  shell: export KUBECONFIG=/etc/kubernetes/admin.conf; kubectl apply -f /root/setup/dashboard/dashboard-admin.yaml
 
 - name: Install influxdb
-  shell: export KUBECONFIG=/etc/admin.conf; kubectl apply -f /root/setup/dashboard/heapster/deploy/kube-config/influxdb/
+  shell: export KUBECONFIG=/etc/kubernetes/admin.conf; kubectl apply -f /root/setup/dashboard/heapster/deploy/kube-config/influxdb/
 
 - name: Install heapster
-  shell: export KUBECONFIG=/etc/admin.conf; kubectl apply -f /root/setup/dashboard/heapster/deploy/kube-config/rbac/heapster-rbac.yaml
+  shell: export KUBECONFIG=/etc/kubernetes/admin.conf; kubectl apply -f /root/setup/dashboard/heapster/deploy/kube-config/rbac/heapster-rbac.yaml
 
 - name: Set kubernetes dashboard replicas.
-  shell: export KUBECONFIG=/etc/admin.conf; kubectl scale --replicas={{ groups['masters'] | length }} -n kube-system deployment/kubernetes-dashboard
+  shell: export KUBECONFIG=/etc/kubernetes/admin.conf; kubectl scale --replicas={{ groups['masters'] | length }} -n kube-system deployment/kubernetes-dashboard
 
 - name: Set heapster replicas.
-  shell: export KUBECONFIG=/etc/admin.conf; kubectl scale --replicas={{ groups['masters'] | length }} -n kube-system deployment/heapster
+  shell: export KUBECONFIG=/etc/kubernetes/admin.conf; kubectl scale --replicas={{ groups['masters'] | length }} -n kube-system deployment/heapster
 
 - name: Set grafana replicas.
-  shell: export KUBECONFIG=/etc/admin.conf; kubectl scale --replicas={{ groups['masters'] | length }} -n kube-system deployment/monitoring-grafana
+  shell: export KUBECONFIG=/etc/kubernetes/admin.conf; kubectl scale --replicas={{ groups['masters'] | length }} -n kube-system deployment/monitoring-grafana
 
 - name: Set influxdb replicas.
-  shell: export KUBECONFIG=/etc/admin.conf; kubectl scale --replicas={{ groups['masters'] | length }} -n kube-system deployment/monitoring-influxdb
+  shell: export KUBECONFIG=/etc/kubernetes/admin.conf; kubectl scale --replicas={{ groups['masters'] | length }} -n kube-system deployment/monitoring-influxdb
 
