--- a/ansible/roles/primary-master/tasks/flannel.yaml
+++ b/ansible/roles/primary-master/tasks/flannel.yaml
@@ -3,7 +3,7 @@
 #
 ---
 
-- name: Generate 'weavenet' network plugin yaml
-  local_action: shell wget -O /tmp/net.yaml "https://raw.githubusercontent.com/coreos/flannel/v0.9.1/Documentation/kube-flannel.yml"
+- name: Generate 'flannel' network plugin yaml
+  local_action: "shell wget -O /tmp/net.yaml '{{ FLANNEL_YAML_URL }}'"
   args:
     warn: no
