--- a/ansible/roles/primary-master/tasks/main.yaml
+++ b/ansible/roles/primary-master/tasks/main.yaml
@@ -5,7 +5,7 @@
 
 - name: Make sure that we're on a supported NETWORK_PLUGIN
   fail: msg="Unsupported NETWORK_PLUGIN. Check roles/primary-master/tasks/*.yaml"
-  when: "NETWORK_PLUGIN not in [ 'flannel', 'weavenet' ]"
+  when: "NETWORK_PLUGIN not in [ 'flannel', 'weavenet', 'calico' ]"
 
 - name: Generate 'kubeadm' configuration file
   template: src=kubeadm-init.yaml.j2 dest=/root/kubeadm-init.yaml
@@ -13,11 +13,14 @@
 - name: Run 'kubeadm'
   command: kubeadm init --config=/root/kubeadm-init.yaml
 
-- include: weavenet.yaml
+- import_tasks: weavenet.yaml
   when: NETWORK_PLUGIN == 'weavenet'
 
-- include: flannel.yaml
+- import_tasks: flannel.yaml
   when: NETWORK_PLUGIN == 'flannel'
+
+- import_tasks: calico.yaml
+  when: NETWORK_PLUGIN == 'calico'
 
 - name: Copy network plugin yaml
   copy: src=/tmp/net.yaml dest=/root/net.yaml
