--- a/ansible/group_vars/all.yaml
+++ b/ansible/group_vars/all.yaml
@@ -8,11 +8,25 @@
 #MASTER_VIP: (abstract)
 DNS_IP: 192.168.0.20
 HAS_LB: no
+HOST_ARCH: amd64
 
 # Network settings
 # Choices are: flannel, weavenet, calico
 NETWORK_PLUGIN: flannel
 POD_NETWORK_CIDR: 10.244.0.0/16
+
+# Settings for the network plugins
+CALICO_YAML_URL: "https://docs.projectcalico.org/master/getting-started/kubernetes/installation/hosted/kubeadm/1.7/calico.yaml"
+WEAVENET_YAML_URL_PREFIX: "https://cloud.weave.works/k8s/net?k8s-version="
+FLANNEL_YAML_URL: "https://raw.githubusercontent.com/coreos/flannel/v0.9.1/Documentation/kube-flannel.yml"
+
+# Certificate settings (does not really matter for self-signed certificates in a private network)
+CERT_COMMON_NAME: "etcd"
+CERT_COUNTRY: "DE"
+CERT_LOCALITY: "Hamburg"
+CERT_ORGANISATION: "Yoyodyne"
+CERT_STATE: "Hamburg"
+CERT_ORG_UNIT: "Deployment"
 
 # Software versions (used by installation via package manager)
 KUBERNETES_VERSION: "1.8.3"
@@ -22,29 +36,24 @@ ETCD_VERSION: "3.2.7"
 KEEPALIVED_VERSION: "1.3.5"
 NGINX_VERSION: "1.12.2"
 
-# Settings for the network plugins
-CALICO_YAML_URL: "https://docs.projectcalico.org/master/getting-started/kubernetes/installation/hosted/kubeadm/1.7/calico.yaml"
-WEAVENET_YAML_URL_PREFIX: "https://cloud.weave.works/k8s/net?k8s-version="
-FLANNEL_YAML_URL: "https://raw.githubusercontent.com/coreos/flannel/v0.9.1/Documentation/kube-flannel.yml"
-
 # Tags for some images
-FLANNEL_TAG: "v0.9.1-amd64"
+FLANNEL_TAG: "v0.9.1-{{ HOST_ARCH }}"
 ETCD_TAG: "3.0.17"
 PAUSE_TAG: "3.0"
 ETCD_OPERATOR_TAG: "v0.2.1"
 
 # Images for prefetching
 DOCKER_IMAGES: [
-  { name: "gcr.io/google_containers/kube-apiserver-amd64", tag: "v{{ KUBERNETES_VERSION }}" },
-  { name: "gcr.io/google_containers/kube-controller-manager-amd64", tag: "v{{ KUBERNETES_VERSION }}" },
-  { name: "gcr.io/google_containers/kube-scheduler-amd64", tag: "v{{ KUBERNETES_VERSION }}" },
-  { name: "gcr.io/google_containers/kube-proxy-amd64", tag: "v{{ KUBERNETES_VERSION }}" },
-  { name: "gcr.io/google_containers/k8s-dns-sidecar-amd64", tag: "{{ KUBERNETES_DNS_VERSION }}" },
-  { name: "gcr.io/google_containers/k8s-dns-kube-dns-amd64", tag: "{{ KUBERNETES_DNS_VERSION }}" },
-  { name: "gcr.io/google_containers/k8s-dns-dnsmasq-nanny-amd64", tag: "{{ KUBERNETES_DNS_VERSION }}" },
+  { name: "gcr.io/google_containers/kube-apiserver-{{ HOST_ARCH }}", tag: "v{{ KUBERNETES_VERSION }}" },
+  { name: "gcr.io/google_containers/kube-controller-manager-{{ HOST_ARCH }}", tag: "v{{ KUBERNETES_VERSION }}" },
+  { name: "gcr.io/google_containers/kube-scheduler-{{ HOST_ARCH }}", tag: "v{{ KUBERNETES_VERSION }}" },
+  { name: "gcr.io/google_containers/kube-proxy-{{ HOST_ARCH }}", tag: "v{{ KUBERNETES_VERSION }}" },
+  { name: "gcr.io/google_containers/k8s-dns-sidecar-{{ HOST_ARCH }}", tag: "{{ KUBERNETES_DNS_VERSION }}" },
+  { name: "gcr.io/google_containers/k8s-dns-kube-dns-{{ HOST_ARCH }}", tag: "{{ KUBERNETES_DNS_VERSION }}" },
+  { name: "gcr.io/google_containers/k8s-dns-dnsmasq-nanny-{{ HOST_ARCH }}", tag: "{{ KUBERNETES_DNS_VERSION }}" },
   { name: "quay.io/coreos/flannel", tag: "{{ FLANNEL_TAG }}" },
-  { name: "gcr.io/google_containers/etcd-amd64", tag: "{{ ETCD_TAG }}" },
-  { name: "gcr.io/google_containers/pause-amd64", tag: "{{ PAUSE_TAG }}" },
+  { name: "gcr.io/google_containers/etcd-{{ HOST_ARCH }}", tag: "{{ ETCD_TAG }}" },
+  { name: "gcr.io/google_containers/pause-{{ HOST_ARCH }}", tag: "{{ PAUSE_TAG }}" },
   { name: "quay.io/coreos/etcd-operator", tag: "{{ ETCD_OPERATOR_TAG }}" }
 ]
 
