--- a/ansible/roles/prepare-nodes/tasks/main.yaml
+++ b/ansible/roles/prepare-nodes/tasks/main.yaml
@@ -26,3 +26,10 @@
   #systemd: daemon-reload=yes
   command: systemctl daemon-reload
 
+- name: Create cert dir for etcd
+  file: path=/etc/kubernetes/pki/etcd state=directory
+  when: "'masters' in group_names"
+
+- name: Unarchive certificate files for the etcd instances
+  unarchive: copy=yes src=/tmp/pki-pems.tar.gz dest=/etc/kubernetes/pki/etcd
+  when: "'masters' in group_names"
