New functionality: - support for upgrading a cluster (see README.md for details)
Fixes:
- though certificates were generated, etcd was still used via http

--- a/ansible/cluster-setup.yaml
+++ b/ansible/cluster-setup.yaml
@@ -30,6 +30,7 @@
   any_errors_fatal: yes
   roles:
   - prepare-nodes
+  - {role: client-certs,       when: "'masters'           in group_names" }
   - {role: primary-master,     when: "'primary-master'    in group_names" }
   - {role: secondary-masters,  when: "'secondary-masters' in group_names" }
   - {role: ha-settings,        when: "'primary-master'    in group_names" }
