--- a/ansible/roles/minions/tasks/main.yaml
+++ b/ansible/roles/minions/tasks/main.yaml
@@ -8,5 +8,5 @@
 - name: Copy join script (fetched in 'join-token' role)
   copy: src=/tmp/join-worker-node.sh dest=/root/join-worker-node.sh owner=root group=root mode=0755
 
-- name: Join join-worker-node
+- name: Join worker-node
   command: sh /root/join-worker-node.sh
