--- a/ansible/roles/dashboard/tasks/main.yaml
+++ b/ansible/roles/dashboard/tasks/main.yaml
@@ -7,6 +7,10 @@
   local_action: "shell which rsync"
   run_once: true
 
+- name: Make sure that 'git' is available on the local host
+  local_action: "shell which git"
+  run_once: true
+
 - name: Make sure that 'rsync' is available on the masters
   package: name=rsync state=present
   when: "'masters' in group_names"
@@ -21,7 +25,7 @@
   when: "not HAS_LB"
 
 - name: clone heapster git to /tmp
-  local_action: "shell cd /tmp; if [ -d heapster ]; then cd heapster; git reset --hard HEAD; git pull; else git clone https://github.com/kubernetes/heapster.git; fi"
+  local_action: "script clone-heapster.sh"
 
 - name: Edit grafana yaml
   local_action: "shell perl -pi -e 's/# *type: *NodePort/type: NodePort/' /tmp/heapster/deploy/kube-config/influxdb/grafana.yaml"
