--- a/ansible/roles/ha-settings/tasks/main.yaml
+++ b/ansible/roles/ha-settings/tasks/main.yaml
@@ -18,13 +18,14 @@
     loop_var: master
   when: "'primary-master' in group_names"
 
+- name: Set kube-dns replicas
+  shell: export KUBECONFIG=/etc/kubernetes/admin.conf; kubectl scale --replicas={{ groups['masters'] | length }} -n kube-system deployment/kube-dns
+  when: "'primary-master' in group_names"
+
 - name: Set node-role.kubernetes.io/master:NoSchedule taint on secondary masters
   shell: "export KUBECONFIG=/etc/kubernetes/admin.conf; kubectl taint nodes {{ hostvars[secondary]['ansible_fqdn'] }} node-role.kubernetes.io/master=value:NoSchedule"
   with_items: "{{ groups['secondary-masters'] }}"
   loop_control:
     loop_var: secondary
   when: "'primary-master' in group_names"
-
-- name: Set kube-dns replicas.
-  shell: export KUBECONFIG=/etc/kubernetes/admin.conf; kubectl scale --replicas={{ groups['masters'] | length }} -n kube-system deployment/kube-dns
 
