--- a/ansible/roles/upgrade-cluster/tasks/main.yaml
+++ b/ansible/roles/upgrade-cluster/tasks/main.yaml
@@ -76,6 +76,6 @@
   script: "/tmp/wait-for-primary-master.sh"
   when: "'primary-master' in group_names"
 
-- name: Set kube-dns replicas.
+- name: Set kube-dns replicas
   shell: export KUBECONFIG=/etc/kubernetes/admin.conf; kubectl scale --replicas={{ groups['masters'] | length }} -n kube-system deployment/kube-dns
   when: "'primary-master' in group_names"
